fixes
Signed-off-by: Kai Huang <ahkcs@amazon.com>